schedule, booking and payment